--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
         <div class="my-form d-flex">
           <img src="./assets/hero/person.svg" alt="person" />
-          <input id="input1" type="text" placeholder="Salman" />
+          <input id="input1" type="text" placeholder="Aliya" />
         </div>
 
         <div class="my-form d-flex">
