--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
     crossorigin="anonymous"></script>
   <pre class="salu">
-   By ••• <b>Salman</b> •••
+   By ••• <b>Aliya</b> •••
     </pre>
   <!-- ------------------------ -->
 </body>
